# AI-Agent

./: .env.example  README.md  pyproject.toml  requirements.txt
docs/: portfolio_guide.md  setup_mac.md  setup_windows.md
docs/webflow-job/: page1.html  page2.html  page3.html  page4.html  page5.html  page6.html  page7.html  page8.html  page9.html
examples/: conversation_demo.md
integration/: n8n_email_agent.json
src/email_agent/: __init__.py  agent.py  config.py  workflows.py
src/email_agent/connectors/: base.py  gmail.py  outlook.py
tests/: test_config.py
