[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-email-agent"
version = "0.1.0"
description = "LangGraph-powered AI agent for Gmail and Outlook triage"
authors = [{ name = "Your Name" }]
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
